1.1.1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14390: Items before first section are merged with first section
- Fixed issue #14332: Paragraphs are sometimes missing in the output, when
  converting rst documents
- Fixed issue #14408: Error parsing grd tables, where first line does not
  provide full table column specification


1.1 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14136: Errors in some file docblocks
- Fixed issue #14185: Invalid docbook markup created for table cells in wiki
  visitor
- Fixed issue #14188: ezcDocumentEzXml::getAsDocbook() returns an
  ezcDocumentEzXml rather than ezcDocumentDocbook
- Fixed issue #14208: Invalid docubook markup: Attributes used in wrong case
- Fixed issue #14210: Docbook: literallayout class should be "normal" instead
  of "Normal"
- Fixed issue #14211: Docbook markup: citation and attribution contents should
  not be wrapped inside a paragraph
- Added support for reading three wiki formats: Confluence, Creole and
  DokuWiki.
- Added support for writing the Creole wiki format.
- Added support for reading XHTML.
- Added support for reading and writing eZ Publish XML formats.
- Added support for writing RST.


1.1rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.1beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes


1.1alpha1 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #12339: Add support for eZXml markup.
- Implemented feature #12340: Add support for wiki markup.
- Implemented feature #13083: Read and write XHTML format.
- Implemented feature #13084: Write RST format.
- Implemented feature #13322: Possibility to reference a stylesheet for use